--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,27 +20,6 @@
         app:riv_border_width="2dp"
         app:riv_oval="true" />
 
-    <!--<ImageView-->
-        <!--android:id="@+id/iv"-->
-        <!--android:layout_width="70dp"-->
-        <!--android:layout_height="70dp"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_marginTop="40dp"-->
-        <!--android:background="@drawable/head" />-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="10dp">-->
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="IP"-->
-            <!--android:textSize="20sp">-->
-        <!--</TextView>-->
-
-    <!--</LinearLayout>-->
-
     <LinearLayout android:id="@+id/ll_Ip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -127,16 +106,7 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <!--<TextView-->
-            <!--android:id="@+id/tv_reg"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:textSize="20sp"-->
-            <!--android:text="@string/reg"-->
 
-            <!--android:onClick="regOnclick"-->
-            <!--/>-->
 
         <CheckBox android:id="@+id/chk_rememPwd"
             android:layout_width="wrap_content"
@@ -153,16 +123,53 @@
             android:textSize="20sp"/>
     </LinearLayout>
 
-    <Button android:id="@+id/btn_login"
+    <!--<Button android:id="@+id/btn_login"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginTop="50dp"-->
+        <!--android:background="#3C8DC4"-->
+        <!--android:text="登录"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:textSize="20sp"-->
+        <!--android:onClick="btn_login_click"/>-->
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="50dp"
-        android:background="#3C8DC4"
-        android:text="登录"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:onClick="btn_login_click"/>
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <SeekBar
+                android:id="@+id/sb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="100"
+                android:progress="0"
+                android:progressDrawable="@drawable/seekbar_bg"
+                android:thumb="@drawable/huakuai2"
+                android:thumbOffset="0dp" />
+
+            <TextView
+                android:id="@+id/tv_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="请按住滑块，拖动到最右边"
+                android:textColor="#888888"
+                android:textSize="15dp" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
 </LinearLayout>
