--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,34 +20,34 @@
         app:riv_border_width="2dp"
         app:riv_oval="true" />
 
-    <LinearLayout android:id="@+id/ll_Ip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
-        android:background="#ffffff">
+    <!--<LinearLayout android:id="@+id/ll_Ip"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_marginBottom="5dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginTop="15dp"-->
+        <!--android:background="#ffffff">-->
 
-        <TextView
-            android:id="@+id/tv_ip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="    IP："
-            android:textColor="#000"
-            android:textSize="20sp" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_ip"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:padding="10dp"-->
+            <!--android:text="    IP："-->
+            <!--android:textColor="#000"-->
+            <!--android:textSize="20sp" />-->
 
-        <EditText android:id="@+id/et_ip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text=""
-            android:hint="输入服务器地址"
-            android:background="@null"
-            android:padding="10dp"/>
-    </LinearLayout>
+        <!--<EditText android:id="@+id/et_ip"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:text=""-->
+            <!--android:hint="输入服务器地址"-->
+            <!--android:background="@null"-->
+            <!--android:padding="10dp"/>-->
+    <!--</LinearLayout>-->
 
     <LinearLayout android:id="@+id/ll_number"
         android:layout_width="match_parent"
@@ -56,7 +56,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="60dp"
         android:background="#ffffff">
 
         <TextView
