--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,41 +14,43 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_margin="10dp"
-        >
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="选择图片或视频资料上传"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:text="选择图片或视频资料上传" />
 
         <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <ImageButton
                 android:id="@+id/ib1"
                 android:layout_width="96dp"
                 android:layout_height="102dp"
-                android:background="@drawable/upload"
-                />
+                android:background="@drawable/upload" />
+
             <ImageButton
                 android:id="@+id/ib2"
-                android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@id/ib1"
                 android:layout_width="96dp"
                 android:layout_height="102dp"
-                android:background="@drawable/upload"
-                />
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/ib1"
+                android:background="@drawable/upload" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="选取图片" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,7 +58,6 @@
                 android:text="选取视频" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,93 +65,89 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="经度："/>
-
-            <TextView
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="纬度："/>
-            <TextView
-                android:layout_width="150dp"
-                android:layout_height="wrap_content" />
+                android:scrollbars="vertical"
+                android:id="@+id/tv_location"
+                ></TextView>
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="位置："/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="经度：" />-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/editText"-->
+                <!--android:layout_width="150dp"-->
+                <!--android:layout_height="wrap_content" />-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="纬度：" />-->
+
+            <!--<TextView-->
+                <!--android:layout_width="150dp"-->
+                <!--android:layout_height="wrap_content" />-->
+
+        <!--</LinearLayout>-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="1dp">-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="位置：" />-->
+
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content" />-->
+        <!--</LinearLayout>-->
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="文字描述："/>
+            android:text="文字描述：" />
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:hint="请填写文字说明"
+            android:layout_height="140dp"
+
+            android:background="@drawable/wzi"
             android:gravity="top"
-            android:layout_weight="0.22"
-            android:background="@drawable/wzi"/>
+            android:hint="请填写文字说明" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="添加语音资料："/>
+            android:text="添加语音资料：" />
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="按住说话"
-                />
+                android:text="按住说话" />
 
         </RelativeLayout>
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="上传"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"
+            android:text="上传" />
     </LinearLayout>
 </LinearLayout>
-
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:orientation="vertical" >-->
-
-    <!--<Button-->
-        <!--android:id="@+id/addfence"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/startlocation" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/textView1"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="200dp"-->
-        <!--android:layout_weight="2.89"-->
-        <!--android:scrollbars="vertical"-->
-        <!--android:textColor="#ffffffff"-->
-        <!--android:text=" "/>-->
-
-<!--</LinearLayout>-->
