--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,53 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
+    android:background="@drawable/upload_bg"
     android:orientation="vertical"
     tools:context="com.org.rivermanage.activaty.LoginActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="80dp"
+
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="黄河工程管理巡查系统"
+            android:textSize="25sp" />
+    </LinearLayout>
 
 
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="19dp"
         android:src="@mipmap/head"
         app:riv_border_color="#333333"
         android:layout_gravity="center"
         app:riv_border_width="2dp"
         app:riv_oval="true" />
-
-    <!--<LinearLayout android:id="@+id/ll_Ip"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:layout_marginBottom="5dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:layout_marginTop="15dp"-->
-        <!--android:background="#ffffff">-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_ip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:padding="10dp"-->
-            <!--android:text="    IP："-->
-            <!--android:textColor="#000"-->
-            <!--android:textSize="20sp" />-->
-
-        <!--<EditText android:id="@+id/et_ip"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="5dp"-->
-            <!--android:text=""-->
-            <!--android:hint="输入服务器地址"-->
-            <!--android:background="@null"-->
-            <!--android:padding="10dp"/>-->
-    <!--</LinearLayout>-->
 
     <LinearLayout android:id="@+id/ll_number"
         android:layout_width="match_parent"
@@ -57,7 +50,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="60dp"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        >
 
         <TextView
             android:id="@+id/tv_number"
@@ -73,6 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:hint="输入账号信息"
+            android:text="admin"
             android:background="@null"
             android:padding="10dp"/>
     </LinearLayout>
@@ -95,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:hint="输入密码信息"
+            android:text="123456"
             android:password="true"
             android:background="@null"
             android:padding="10dp"/>
@@ -124,17 +120,6 @@
             android:textSize="20sp"/>
     </LinearLayout>
 
-    <!--<Button android:id="@+id/btn_login"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:layout_marginTop="50dp"-->
-        <!--android:background="#3C8DC4"-->
-        <!--android:text="登录"-->
-        <!--android:textColor="#ffffff"-->
-        <!--android:textSize="20sp"-->
-        <!--android:onClick="btn_login_click"/>-->
 
 
     <LinearLayout
@@ -147,7 +132,7 @@
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:padding="10dp">
 
             <SeekBar
                 android:id="@+id/sb"
@@ -165,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:gravity="center"
-                android:text="请按住滑块，拖动到最右边"
+                android:text="滑动登录"
                 android:textColor="#888888"
                 android:textSize="15dp" />
         </RelativeLayout>
