--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#ce3d3a</color>
     <color name="colorPrimaryDark">#ce3d3a</color>
     <color name="colorAccent">#ce3d3a</color>
+    <color name="border_clo">#ccc</color>
+    <!-- 纯白-->
+    <color name="white">#ffffff</color>
 </resources>
