--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,49 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+
+
+    <style name="wrap_layout">
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <!--<item name="android:layout_marginLeft">8dp</item>-->
+        <!--<item name="android:layout_marginRight">8dp</item>-->
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:padding">1px</item>
+        <item name="android:background">@drawable/bg_layout_shape</item>
+    </style>
+    <style name="base_layout">
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+    </style>
+    <!-- 上圆角样式 -->
+    <style name="top_layout" parent="base_layout">
+
+    </style>
+    <!--无圆角样式  -->
+    <style name="mid_layout" parent="base_layout">
+
+    </style>
+
+    <!-- 下圆角样式 -->
+    <style name="bottom_layout"  parent="base_layout">
+
+    </style>
+
+    <!-- 全圆角样式 -->
+    <style name="single_layout" parent="base_layout">
+
+    </style>
+
+
 </resources>
