--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="border_clo">#ccc</color>
     <!-- 纯白-->
     <color name="white">#ffffff</color>
+    <color name="colorGray">#33000000</color>
 </resources>
